--- a/docker/web/package.json
+++ b/docker/web/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blockshake/defly-connect": "^1.1.5",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@json-rpc-tools/utils": "^1.7.6",
+    "@perawallet/connect": "^1.3.1",
+    "@txnlab/use-wallet": "^2.0.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@walletconnect/sign-client": "^2.9.0",
+    "algosdk": "^2.4.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
@@ -19,7 +27,7 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
 }
