--- a/docker/web/package.json
+++ b/docker/web/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "@json-rpc-tools/utils": "^1.7.6",
     "@perawallet/connect": "^1.3.1",
+    "@tailwindcss/forms": "^0.5.4",
     "@txnlab/use-wallet": "^2.0.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
